--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,7 @@ Global Styles
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 body {
   font-family: var(--ff-secondary);
@@ -166,7 +167,6 @@ main {
   display: grid;
   place-items: center;
   align-content: center;
-
 }
 .container {
   text-align: center;
@@ -206,10 +206,11 @@ main {
 }
 
 #containGames{
+  max-width: 70%;
   display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 12px;
-    margin: 12px;
+    margin: 12px auto;
 }
 .contain-message {
   border: 1px solid var(--clr-grey-5);
